crates/openracing-curves/tests/snapshots/snapshot_tests__bezier_aggressive_lut.snap
---
source: crates/openracing-curves/tests/snapshot_tests.rs
expression: snapshot
---
[
  0.0,
  0.032,
  0.058,
  0.082,
  0.102,
  0.121,
  0.137,
  0.153,
  0.167,
  0.18,
  0.193,
  0.205,
  0.216,
  0.226,
  0.236,
  0.245,
  0.254,
  0.263,
  0.271,
  0.278,
  0.286,
  0.293,
  0.3,
  0.306,
  0.312,
  0.318,
  0.324,
  0.33,
  0.335,
  0.34,
  0.345,
  0.35,
  0.355,
  0.359,
  0.364,
  0.368,
  0.372,
  0.376,
  0.38,
  0.384,
  0.387,
  0.391,
  0.394,
  0.397,
  0.4,
  0.403,
  0.406,
  0.409,
  0.412,
  0.415,
  0.417,
  0.42,
  0.423,
  0.425,
  0.427,
  0.43,
  0.432,
  0.434,
  0.436,
  0.438,
  0.44,
  0.442,
  0.444,
  0.446,
  0.447,
  0.449,
  0.451,
  0.452,
  0.454,
  0.455,
  0.457,
  0.458,
  0.46,
  0.461,
  0.462,
  0.464,
  0.465,
  0.466,
  0.467,
  0.468,
  0.469,
  0.47,
  0.471,
  0.473,
  0.473,
  0.474,
  0.475,
  0.476,
  0.477,
  0.478,
  0.479,
  0.48,
  0.48,
  0.481,
  0.482,
  0.483,
  0.483,
  0.484,
  0.485,
  0.486,
  0.486,
  0.487,
  0.487,
  0.488,
  0.489,
  0.489,
  0.49,
  0.49,
  0.491,
  0.491,
  0.492,
  0.492,
  0.493,
  0.493,
  0.494,
  0.494,
  0.495,
  0.495,
  0.496,
  0.496,
  0.497,
  0.497,
  0.498,
  0.498,
  0.498,
  0.499,
  0.499,
  0.5,
  0.5,
  0.501,
  0.501,
  0.502,
  0.502,
  0.502,
  0.503,
  0.503,
  0.504,
  0.504,
  0.505,
  0.505,
  0.506,
  0.506,
  0.507,
  0.507,
  0.508,
  0.508,
  0.509,
  0.509,
  0.51,
  0.51,
  0.511,
  0.511,
  0.512,
  0.513,
  0.513,
  0.514,
  0.514,
  0.515,
  0.516,
  0.517,
  0.517,
  0.518,
  0.519,
  0.52,
  0.52,
  0.521,
  0.522,
  0.523,
  0.524,
  0.525,
  0.526,
  0.527,
  0.527,
  0.529,
  0.53,
  0.531,
  0.532,
  0.533,
  0.534,
  0.535,
  0.536,
  0.538,
  0.539,
  0.54,
  0.542,
  0.543,
  0.545,
  0.546,
  0.548,
  0.549,
  0.551,
  0.553,
  0.554,
  0.556,
  0.558,
  0.56,
  0.562,
  0.564,
  0.566,
  0.568,
  0.57,
  0.573,
  0.575,
  0.577,
  0.58,
  0.583,
  0.585,
  0.588,
  0.591,
  0.594,
  0.597,
  0.6,
  0.603,
  0.606,
  0.609,
  0.613,
  0.616,
  0.62,
  0.624,
  0.628,
  0.632,
  0.636,
  0.641,
  0.645,
  0.65,
  0.655,
  0.66,
  0.665,
  0.67,
  0.676,
  0.682,
  0.688,
  0.694,
  0.7,
  0.707,
  0.714,
  0.722,
  0.729,
  0.737,
  0.746,
  0.755,
  0.764,
  0.774,
  0.784,
  0.795,
  0.807,
  0.82,
  0.833,
  0.847,
  0.863,
  0.879,
  0.898,
  0.918,
  0.942,
  0.968,
  1.0
]
