crates/openracing-curves/tests/snapshots/snapshot_tests__bezier_ease_in_lut.snap
---
source: crates/openracing-curves/tests/snapshot_tests.rs
expression: snapshot
---
[
  0.0,
  0.0,
  0.0,
  0.0,
  0.0,
  0.001,
  0.001,
  0.001,
  0.001,
  0.001,
  0.002,
  0.002,
  0.002,
  0.003,
  0.003,
  0.003,
  0.004,
  0.004,
  0.004,
  0.005,
  0.005,
  0.005,
  0.006,
  0.006,
  0.007,
  0.007,
  0.008,
  0.008,
  0.009,
  0.009,
  0.01,
  0.01,
  0.011,
  0.011,
  0.012,
  0.013,
  0.013,
  0.014,
  0.014,
  0.015,
  0.016,
  0.016,
  0.017,
  0.018,
  0.018,
  0.019,
  0.02,
  0.021,
  0.021,
  0.022,
  0.023,
  0.024,
  0.024,
  0.025,
  0.026,
  0.027,
  0.028,
  0.029,
  0.03,
  0.03,
  0.031,
  0.032,
  0.033,
  0.034,
  0.035,
  0.036,
  0.037,
  0.038,
  0.039,
  0.04,
  0.041,
  0.042,
  0.043,
  0.044,
  0.045,
  0.046,
  0.047,
  0.048,
  0.05,
  0.051,
  0.052,
  0.053,
  0.054,
  0.055,
  0.057,
  0.058,
  0.059,
  0.06,
  0.062,
  0.063,
  0.064,
  0.066,
  0.067,
  0.068,
  0.07,
  0.071,
  0.072,
  0.074,
  0.075,
  0.077,
  0.078,
  0.08,
  0.081,
  0.083,
  0.084,
  0.086,
  0.087,
  0.089,
  0.09,
  0.092,
  0.094,
  0.095,
  0.097,
  0.099,
  0.1,
  0.102,
  0.104,
  0.106,
  0.107,
  0.109,
  0.111,
  0.113,
  0.115,
  0.116,
  0.118,
  0.12,
  0.122,
  0.124,
  0.126,
  0.128,
  0.13,
  0.132,
  0.134,
  0.136,
  0.138,
  0.14,
  0.142,
  0.145,
  0.147,
  0.149,
  0.151,
  0.153,
  0.156,
  0.158,
  0.16,
  0.163,
  0.165,
  0.167,
  0.17,
  0.172,
  0.175,
  0.177,
  0.18,
  0.182,
  0.185,
  0.188,
  0.19,
  0.193,
  0.196,
  0.198,
  0.201,
  0.204,
  0.207,
  0.209,
  0.212,
  0.215,
  0.218,
  0.221,
  0.224,
  0.227,
  0.23,
  0.234,
  0.237,
  0.24,
  0.243,
  0.246,
  0.25,
  0.253,
  0.256,
  0.26,
  0.263,
  0.267,
  0.27,
  0.274,
  0.278,
  0.281,
  0.285,
  0.289,
  0.293,
  0.297,
  0.301,
  0.305,
  0.309,
  0.313,
  0.317,
  0.321,
  0.326,
  0.33,
  0.334,
  0.339,
  0.343,
  0.348,
  0.353,
  0.357,
  0.362,
  0.367,
  0.372,
  0.377,
  0.382,
  0.388,
  0.393,
  0.398,
  0.404,
  0.409,
  0.415,
  0.421,
  0.427,
  0.433,
  0.439,
  0.445,
  0.452,
  0.458,
  0.465,
  0.472,
  0.479,
  0.486,
  0.493,
  0.501,
  0.508,
  0.516,
  0.524,
  0.532,
  0.541,
  0.55,
  0.559,
  0.568,
  0.578,
  0.588,
  0.598,
  0.609,
  0.62,
  0.631,
  0.643,
  0.656,
  0.669,
  0.683,
  0.698,
  0.714,
  0.731,
  0.75,
  0.771,
  0.794,
  0.82,
  0.852,
  0.894,
  1.0
]
