crates/openracing-curves/tests/snapshots/snapshot_tests__bezier_ease_in_out_lut.snap
---
source: crates/openracing-curves/tests/snapshot_tests.rs
expression: snapshot
---
[
  0.0,
  0.102,
  0.14,
  0.168,
  0.191,
  0.21,
  0.227,
  0.242,
  0.256,
  0.268,
  0.279,
  0.289,
  0.299,
  0.308,
  0.317,
  0.325,
  0.332,
  0.339,
  0.346,
  0.353,
  0.359,
  0.364,
  0.37,
  0.375,
  0.38,
  0.385,
  0.39,
  0.394,
  0.398,
  0.402,
  0.406,
  0.41,
  0.414,
  0.417,
  0.42,
  0.424,
  0.427,
  0.43,
  0.433,
  0.435,
  0.438,
  0.44,
  0.443,
  0.445,
  0.448,
  0.45,
  0.452,
  0.454,
  0.456,
  0.458,
  0.46,
  0.461,
  0.463,
  0.465,
  0.466,
  0.468,
  0.469,
  0.471,
  0.472,
  0.473,
  0.475,
  0.476,
  0.477,
  0.478,
  0.479,
  0.48,
  0.481,
  0.482,
  0.483,
  0.484,
  0.485,
  0.486,
  0.487,
  0.487,
  0.488,
  0.489,
  0.489,
  0.49,
  0.491,
  0.491,
  0.492,
  0.492,
  0.493,
  0.493,
  0.494,
  0.494,
  0.495,
  0.495,
  0.495,
  0.496,
  0.496,
  0.496,
  0.497,
  0.497,
  0.497,
  0.497,
  0.498,
  0.498,
  0.498,
  0.498,
  0.498,
  0.499,
  0.499,
  0.499,
  0.499,
  0.499,
  0.499,
  0.499,
  0.499,
  0.5,
  0.5,
  0.5,
  0.5,
  0.5,
  0.5,
  0.5,
  0.5,
  0.5,
  0.5,
  0.5,
  0.5,
  0.5,
  0.5,
  0.5,
  0.5,
  0.5,
  0.5,
  0.5,
  0.5,
  0.5,
  0.5,
  0.5,
  0.5,
  0.5,
  0.5,
  0.5,
  0.5,
  0.5,
  0.5,
  0.5,
  0.5,
  0.5,
  0.5,
  0.5,
  0.5,
  0.5,
  0.5,
  0.501,
  0.501,
  0.501,
  0.501,
  0.501,
  0.501,
  0.501,
  0.501,
  0.502,
  0.502,
  0.502,
  0.502,
  0.502,
  0.503,
  0.503,
  0.503,
  0.503,
  0.504,
  0.504,
  0.504,
  0.505,
  0.505,
  0.505,
  0.506,
  0.506,
  0.507,
  0.507,
  0.508,
  0.508,
  0.509,
  0.509,
  0.51,
  0.511,
  0.511,
  0.512,
  0.513,
  0.513,
  0.514,
  0.515,
  0.516,
  0.517,
  0.518,
  0.519,
  0.52,
  0.521,
  0.522,
  0.523,
  0.524,
  0.525,
  0.527,
  0.528,
  0.529,
  0.531,
  0.532,
  0.534,
  0.535,
  0.537,
  0.539,
  0.54,
  0.542,
  0.544,
  0.546,
  0.548,
  0.55,
  0.552,
  0.555,
  0.557,
  0.56,
  0.562,
  0.565,
  0.567,
  0.57,
  0.573,
  0.576,
  0.58,
  0.583,
  0.586,
  0.59,
  0.594,
  0.598,
  0.602,
  0.606,
  0.61,
  0.615,
  0.62,
  0.625,
  0.63,
  0.636,
  0.641,
  0.647,
  0.654,
  0.661,
  0.668,
  0.675,
  0.683,
  0.692,
  0.701,
  0.711,
  0.721,
  0.732,
  0.744,
  0.758,
  0.773,
  0.79,
  0.809,
  0.832,
  0.86,
  0.898,
  1.0
]
