crates/openracing-curves/tests/snapshots/snapshot_tests__bezier_ease_out_lut.snap
---
source: crates/openracing-curves/tests/snapshot_tests.rs
expression: snapshot
---
[
  0.0,
  0.106,
  0.148,
  0.18,
  0.206,
  0.229,
  0.25,
  0.269,
  0.286,
  0.302,
  0.317,
  0.331,
  0.344,
  0.357,
  0.369,
  0.38,
  0.391,
  0.402,
  0.412,
  0.422,
  0.432,
  0.441,
  0.45,
  0.459,
  0.468,
  0.476,
  0.484,
  0.492,
  0.499,
  0.507,
  0.514,
  0.521,
  0.528,
  0.535,
  0.542,
  0.548,
  0.555,
  0.561,
  0.567,
  0.573,
  0.579,
  0.585,
  0.591,
  0.596,
  0.602,
  0.607,
  0.612,
  0.618,
  0.623,
  0.628,
  0.633,
  0.638,
  0.643,
  0.647,
  0.652,
  0.657,
  0.661,
  0.666,
  0.67,
  0.674,
  0.679,
  0.683,
  0.687,
  0.691,
  0.695,
  0.699,
  0.703,
  0.707,
  0.711,
  0.715,
  0.719,
  0.722,
  0.726,
  0.73,
  0.733,
  0.737,
  0.74,
  0.744,
  0.747,
  0.75,
  0.754,
  0.757,
  0.76,
  0.763,
  0.766,
  0.77,
  0.773,
  0.776,
  0.779,
  0.782,
  0.785,
  0.788,
  0.791,
  0.793,
  0.796,
  0.799,
  0.802,
  0.804,
  0.807,
  0.81,
  0.812,
  0.815,
  0.818,
  0.82,
  0.823,
  0.825,
  0.828,
  0.83,
  0.833,
  0.835,
  0.837,
  0.84,
  0.842,
  0.844,
  0.847,
  0.849,
  0.851,
  0.853,
  0.855,
  0.858,
  0.86,
  0.862,
  0.864,
  0.866,
  0.868,
  0.87,
  0.872,
  0.874,
  0.876,
  0.878,
  0.88,
  0.882,
  0.884,
  0.885,
  0.887,
  0.889,
  0.891,
  0.893,
  0.894,
  0.896,
  0.898,
  0.9,
  0.901,
  0.903,
  0.905,
  0.906,
  0.908,
  0.91,
  0.911,
  0.913,
  0.914,
  0.916,
  0.917,
  0.919,
  0.92,
  0.922,
  0.923,
  0.925,
  0.926,
  0.928,
  0.929,
  0.93,
  0.932,
  0.933,
  0.934,
  0.936,
  0.937,
  0.938,
  0.94,
  0.941,
  0.942,
  0.943,
  0.945,
  0.946,
  0.947,
  0.948,
  0.949,
  0.95,
  0.952,
  0.953,
  0.954,
  0.955,
  0.956,
  0.957,
  0.958,
  0.959,
  0.96,
  0.961,
  0.962,
  0.963,
  0.964,
  0.965,
  0.966,
  0.967,
  0.968,
  0.969,
  0.97,
  0.97,
  0.971,
  0.972,
  0.973,
  0.974,
  0.975,
  0.976,
  0.976,
  0.977,
  0.978,
  0.979,
  0.979,
  0.98,
  0.981,
  0.982,
  0.982,
  0.983,
  0.984,
  0.984,
  0.985,
  0.986,
  0.986,
  0.987,
  0.987,
  0.988,
  0.989,
  0.989,
  0.99,
  0.99,
  0.991,
  0.991,
  0.992,
  0.992,
  0.993,
  0.993,
  0.994,
  0.994,
  0.995,
  0.995,
  0.995,
  0.996,
  0.996,
  0.996,
  0.997,
  0.997,
  0.997,
  0.998,
  0.998,
  0.998,
  0.999,
  0.999,
  0.999,
  0.999,
  0.999,
  1.0,
  1.0,
  1.0,
  1.0,
  1.0
]
