crates/openracing-curves/tests/snapshots/snapshot_tests__bezier_s_curve_lut.snap
---
source: crates/openracing-curves/tests/snapshot_tests.rs
expression: snapshot
---
[
  0.0,
  0.012,
  0.023,
  0.034,
  0.045,
  0.055,
  0.065,
  0.075,
  0.085,
  0.094,
  0.103,
  0.112,
  0.121,
  0.129,
  0.138,
  0.146,
  0.154,
  0.161,
  0.169,
  0.176,
  0.184,
  0.191,
  0.198,
  0.204,
  0.211,
  0.217,
  0.224,
  0.23,
  0.236,
  0.242,
  0.247,
  0.253,
  0.259,
  0.264,
  0.269,
  0.274,
  0.279,
  0.284,
  0.289,
  0.294,
  0.299,
  0.303,
  0.308,
  0.312,
  0.316,
  0.32,
  0.325,
  0.329,
  0.333,
  0.336,
  0.34,
  0.344,
  0.348,
  0.351,
  0.355,
  0.358,
  0.361,
  0.365,
  0.368,
  0.371,
  0.374,
  0.377,
  0.38,
  0.383,
  0.386,
  0.389,
  0.392,
  0.394,
  0.397,
  0.4,
  0.402,
  0.405,
  0.407,
  0.41,
  0.412,
  0.414,
  0.417,
  0.419,
  0.421,
  0.423,
  0.425,
  0.427,
  0.43,
  0.432,
  0.434,
  0.436,
  0.437,
  0.439,
  0.441,
  0.443,
  0.445,
  0.447,
  0.448,
  0.45,
  0.452,
  0.454,
  0.455,
  0.457,
  0.458,
  0.46,
  0.462,
  0.463,
  0.465,
  0.466,
  0.468,
  0.469,
  0.471,
  0.472,
  0.474,
  0.475,
  0.477,
  0.478,
  0.479,
  0.481,
  0.482,
  0.483,
  0.485,
  0.486,
  0.487,
  0.489,
  0.49,
  0.491,
  0.493,
  0.494,
  0.495,
  0.497,
  0.498,
  0.499,
  0.501,
  0.502,
  0.503,
  0.505,
  0.506,
  0.507,
  0.509,
  0.51,
  0.511,
  0.513,
  0.514,
  0.515,
  0.517,
  0.518,
  0.519,
  0.521,
  0.522,
  0.523,
  0.525,
  0.526,
  0.528,
  0.529,
  0.531,
  0.532,
  0.534,
  0.535,
  0.537,
  0.538,
  0.54,
  0.542,
  0.543,
  0.545,
  0.546,
  0.548,
  0.55,
  0.552,
  0.553,
  0.555,
  0.557,
  0.559,
  0.561,
  0.563,
  0.564,
  0.566,
  0.568,
  0.57,
  0.573,
  0.575,
  0.577,
  0.579,
  0.581,
  0.583,
  0.586,
  0.588,
  0.59,
  0.593,
  0.595,
  0.598,
  0.6,
  0.603,
  0.606,
  0.608,
  0.611,
  0.614,
  0.617,
  0.62,
  0.623,
  0.626,
  0.629,
  0.632,
  0.635,
  0.639,
  0.642,
  0.645,
  0.649,
  0.652,
  0.656,
  0.66,
  0.664,
  0.667,
  0.671,
  0.675,
  0.68,
  0.684,
  0.688,
  0.692,
  0.697,
  0.701,
  0.706,
  0.711,
  0.716,
  0.721,
  0.726,
  0.731,
  0.736,
  0.741,
  0.747,
  0.753,
  0.758,
  0.764,
  0.77,
  0.776,
  0.783,
  0.789,
  0.796,
  0.802,
  0.809,
  0.816,
  0.824,
  0.831,
  0.839,
  0.846,
  0.854,
  0.862,
  0.871,
  0.879,
  0.888,
  0.897,
  0.906,
  0.915,
  0.925,
  0.935,
  0.945,
  0.955,
  0.966,
  0.977,
  0.988,
  1.0
]
