crates/openracing-curves/tests/snapshots/snapshot_tests__exponential_05_lut.snap
---
source: crates/openracing-curves/tests/snapshot_tests.rs
expression: snapshot
---
[
  0.0,
  0.063,
  0.089,
  0.108,
  0.125,
  0.14,
  0.153,
  0.166,
  0.177,
  0.188,
  0.198,
  0.208,
  0.217,
  0.226,
  0.234,
  0.243,
  0.25,
  0.258,
  0.266,
  0.273,
  0.28,
  0.287,
  0.294,
  0.3,
  0.307,
  0.313,
  0.319,
  0.325,
  0.331,
  0.337,
  0.343,
  0.349,
  0.354,
  0.36,
  0.365,
  0.37,
  0.376,
  0.381,
  0.386,
  0.391,
  0.396,
  0.401,
  0.406,
  0.411,
  0.415,
  0.42,
  0.425,
  0.429,
  0.434,
  0.438,
  0.443,
  0.447,
  0.452,
  0.456,
  0.46,
  0.464,
  0.469,
  0.473,
  0.477,
  0.481,
  0.485,
  0.489,
  0.493,
  0.497,
  0.501,
  0.505,
  0.509,
  0.513,
  0.516,
  0.52,
  0.524,
  0.528,
  0.531,
  0.535,
  0.539,
  0.542,
  0.546,
  0.55,
  0.553,
  0.557,
  0.56,
  0.564,
  0.567,
  0.571,
  0.574,
  0.577,
  0.581,
  0.584,
  0.587,
  0.591,
  0.594,
  0.597,
  0.601,
  0.604,
  0.607,
  0.61,
  0.614,
  0.617,
  0.62,
  0.623,
  0.626,
  0.629,
  0.632,
  0.636,
  0.639,
  0.642,
  0.645,
  0.648,
  0.651,
  0.654,
  0.657,
  0.66,
  0.663,
  0.666,
  0.669,
  0.672,
  0.674,
  0.677,
  0.68,
  0.683,
  0.686,
  0.689,
  0.692,
  0.695,
  0.697,
  0.7,
  0.703,
  0.706,
  0.708,
  0.711,
  0.714,
  0.717,
  0.719,
  0.722,
  0.725,
  0.728,
  0.73,
  0.733,
  0.736,
  0.738,
  0.741,
  0.744,
  0.746,
  0.749,
  0.751,
  0.754,
  0.757,
  0.759,
  0.762,
  0.764,
  0.767,
  0.77,
  0.772,
  0.775,
  0.777,
  0.78,
  0.782,
  0.785,
  0.787,
  0.79,
  0.792,
  0.795,
  0.797,
  0.8,
  0.802,
  0.804,
  0.807,
  0.809,
  0.812,
  0.814,
  0.816,
  0.819,
  0.821,
  0.824,
  0.826,
  0.828,
  0.831,
  0.833,
  0.835,
  0.838,
  0.84,
  0.842,
  0.845,
  0.847,
  0.849,
  0.852,
  0.854,
  0.856,
  0.859,
  0.861,
  0.863,
  0.865,
  0.868,
  0.87,
  0.872,
  0.874,
  0.877,
  0.879,
  0.881,
  0.883,
  0.886,
  0.888,
  0.89,
  0.892,
  0.894,
  0.897,
  0.899,
  0.901,
  0.903,
  0.905,
  0.907,
  0.91,
  0.912,
  0.914,
  0.916,
  0.918,
  0.92,
  0.922,
  0.925,
  0.927,
  0.929,
  0.931,
  0.933,
  0.935,
  0.937,
  0.939,
  0.941,
  0.944,
  0.946,
  0.948,
  0.95,
  0.952,
  0.954,
  0.956,
  0.958,
  0.96,
  0.962,
  0.964,
  0.966,
  0.968,
  0.97,
  0.972,
  0.974,
  0.976,
  0.978,
  0.98,
  0.982,
  0.984,
  0.986,
  0.988,
  0.99,
  0.992,
  0.994,
  0.996,
  0.998,
  1.0
]
