crates/openracing-curves/tests/snapshots/snapshot_tests__exponential_2_lut.snap
---
source: crates/openracing-curves/tests/snapshot_tests.rs
expression: snapshot
---
[
  0.0,
  0.0,
  0.0,
  0.0,
  0.0,
  0.0,
  0.001,
  0.001,
  0.001,
  0.001,
  0.002,
  0.002,
  0.002,
  0.003,
  0.003,
  0.003,
  0.004,
  0.004,
  0.005,
  0.006,
  0.006,
  0.007,
  0.007,
  0.008,
  0.009,
  0.01,
  0.01,
  0.011,
  0.012,
  0.013,
  0.014,
  0.015,
  0.016,
  0.017,
  0.018,
  0.019,
  0.02,
  0.021,
  0.022,
  0.023,
  0.025,
  0.026,
  0.027,
  0.028,
  0.03,
  0.031,
  0.033,
  0.034,
  0.035,
  0.037,
  0.038,
  0.04,
  0.042,
  0.043,
  0.045,
  0.047,
  0.048,
  0.05,
  0.052,
  0.054,
  0.055,
  0.057,
  0.059,
  0.061,
  0.063,
  0.065,
  0.067,
  0.069,
  0.071,
  0.073,
  0.075,
  0.078,
  0.08,
  0.082,
  0.084,
  0.087,
  0.089,
  0.091,
  0.094,
  0.096,
  0.098,
  0.101,
  0.103,
  0.106,
  0.109,
  0.111,
  0.114,
  0.116,
  0.119,
  0.122,
  0.125,
  0.127,
  0.13,
  0.133,
  0.136,
  0.139,
  0.142,
  0.145,
  0.148,
  0.151,
  0.154,
  0.157,
  0.16,
  0.163,
  0.166,
  0.17,
  0.173,
  0.176,
  0.179,
  0.183,
  0.186,
  0.189,
  0.193,
  0.196,
  0.2,
  0.203,
  0.207,
  0.211,
  0.214,
  0.218,
  0.221,
  0.225,
  0.229,
  0.233,
  0.236,
  0.24,
  0.244,
  0.248,
  0.252,
  0.256,
  0.26,
  0.264,
  0.268,
  0.272,
  0.276,
  0.28,
  0.284,
  0.289,
  0.293,
  0.297,
  0.301,
  0.306,
  0.31,
  0.314,
  0.319,
  0.323,
  0.328,
  0.332,
  0.337,
  0.341,
  0.346,
  0.351,
  0.355,
  0.36,
  0.365,
  0.369,
  0.374,
  0.379,
  0.384,
  0.389,
  0.394,
  0.399,
  0.404,
  0.409,
  0.414,
  0.419,
  0.424,
  0.429,
  0.434,
  0.439,
  0.444,
  0.45,
  0.455,
  0.46,
  0.466,
  0.471,
  0.476,
  0.482,
  0.487,
  0.493,
  0.498,
  0.504,
  0.509,
  0.515,
  0.521,
  0.526,
  0.532,
  0.538,
  0.544,
  0.549,
  0.555,
  0.561,
  0.567,
  0.573,
  0.579,
  0.585,
  0.591,
  0.597,
  0.603,
  0.609,
  0.615,
  0.621,
  0.628,
  0.634,
  0.64,
  0.646,
  0.653,
  0.659,
  0.665,
  0.672,
  0.678,
  0.685,
  0.691,
  0.698,
  0.704,
  0.711,
  0.718,
  0.724,
  0.731,
  0.738,
  0.744,
  0.751,
  0.758,
  0.765,
  0.772,
  0.779,
  0.785,
  0.792,
  0.799,
  0.806,
  0.814,
  0.821,
  0.828,
  0.835,
  0.842,
  0.849,
  0.857,
  0.864,
  0.871,
  0.878,
  0.886,
  0.893,
  0.901,
  0.908,
  0.916,
  0.923,
  0.931,
  0.938,
  0.946,
  0.953,
  0.961,
  0.969,
  0.977,
  0.984,
  0.992,
  1.0
]
