crates/openracing-curves/tests/snapshots/snapshot_tests__logarithmic_10_lut.snap
---
source: crates/openracing-curves/tests/snapshot_tests.rs
expression: snapshot
---
[
  0.0,
  0.015,
  0.03,
  0.044,
  0.057,
  0.071,
  0.083,
  0.096,
  0.108,
  0.12,
  0.131,
  0.142,
  0.153,
  0.164,
  0.174,
  0.185,
  0.194,
  0.204,
  0.214,
  0.223,
  0.232,
  0.241,
  0.25,
  0.258,
  0.266,
  0.275,
  0.283,
  0.291,
  0.298,
  0.306,
  0.314,
  0.321,
  0.328,
  0.335,
  0.342,
  0.349,
  0.356,
  0.363,
  0.369,
  0.376,
  0.382,
  0.389,
  0.395,
  0.401,
  0.407,
  0.413,
  0.419,
  0.425,
  0.43,
  0.436,
  0.442,
  0.447,
  0.453,
  0.458,
  0.463,
  0.469,
  0.474,
  0.479,
  0.484,
  0.489,
  0.494,
  0.499,
  0.504,
  0.508,
  0.513,
  0.518,
  0.522,
  0.527,
  0.531,
  0.536,
  0.54,
  0.545,
  0.549,
  0.553,
  0.558,
  0.562,
  0.566,
  0.57,
  0.574,
  0.578,
  0.582,
  0.586,
  0.59,
  0.594,
  0.598,
  0.602,
  0.606,
  0.61,
  0.613,
  0.617,
  0.621,
  0.624,
  0.628,
  0.632,
  0.635,
  0.639,
  0.642,
  0.646,
  0.649,
  0.653,
  0.656,
  0.659,
  0.663,
  0.666,
  0.669,
  0.673,
  0.676,
  0.679,
  0.682,
  0.685,
  0.689,
  0.692,
  0.695,
  0.698,
  0.701,
  0.704,
  0.707,
  0.71,
  0.713,
  0.716,
  0.719,
  0.722,
  0.725,
  0.728,
  0.73,
  0.733,
  0.736,
  0.739,
  0.742,
  0.745,
  0.747,
  0.75,
  0.753,
  0.755,
  0.758,
  0.761,
  0.763,
  0.766,
  0.769,
  0.771,
  0.774,
  0.776,
  0.779,
  0.782,
  0.784,
  0.787,
  0.789,
  0.792,
  0.794,
  0.796,
  0.799,
  0.801,
  0.804,
  0.806,
  0.809,
  0.811,
  0.813,
  0.816,
  0.818,
  0.82,
  0.823,
  0.825,
  0.827,
  0.829,
  0.832,
  0.834,
  0.836,
  0.838,
  0.841,
  0.843,
  0.845,
  0.847,
  0.849,
  0.852,
  0.854,
  0.856,
  0.858,
  0.86,
  0.862,
  0.864,
  0.866,
  0.869,
  0.871,
  0.873,
  0.875,
  0.877,
  0.879,
  0.881,
  0.883,
  0.885,
  0.887,
  0.889,
  0.891,
  0.893,
  0.895,
  0.897,
  0.899,
  0.901,
  0.902,
  0.904,
  0.906,
  0.908,
  0.91,
  0.912,
  0.914,
  0.916,
  0.918,
  0.919,
  0.921,
  0.923,
  0.925,
  0.927,
  0.929,
  0.93,
  0.932,
  0.934,
  0.936,
  0.937,
  0.939,
  0.941,
  0.943,
  0.944,
  0.946,
  0.948,
  0.95,
  0.951,
  0.953,
  0.955,
  0.957,
  0.958,
  0.96,
  0.962,
  0.963,
  0.965,
  0.967,
  0.968,
  0.97,
  0.971,
  0.973,
  0.975,
  0.976,
  0.978,
  0.98,
  0.981,
  0.983,
  0.984,
  0.986,
  0.988,
  0.989,
  0.991,
  0.992,
  0.994,
  0.995,
  0.997,
  0.998,
  1.0
]
