crates/openracing-curves/tests/snapshots/snapshot_tests__logarithmic_e_lut.snap
---
source: crates/openracing-curves/tests/snapshot_tests.rs
expression: snapshot
---
[
  0.0,
  0.007,
  0.013,
  0.02,
  0.027,
  0.033,
  0.04,
  0.046,
  0.053,
  0.059,
  0.065,
  0.072,
  0.078,
  0.084,
  0.09,
  0.096,
  0.102,
  0.108,
  0.114,
  0.12,
  0.126,
  0.132,
  0.138,
  0.144,
  0.15,
  0.156,
  0.161,
  0.167,
  0.173,
  0.178,
  0.184,
  0.19,
  0.195,
  0.201,
  0.206,
  0.212,
  0.217,
  0.223,
  0.228,
  0.233,
  0.239,
  0.244,
  0.249,
  0.254,
  0.26,
  0.265,
  0.27,
  0.275,
  0.28,
  0.285,
  0.29,
  0.295,
  0.3,
  0.305,
  0.31,
  0.315,
  0.32,
  0.325,
  0.33,
  0.335,
  0.34,
  0.344,
  0.349,
  0.354,
  0.359,
  0.363,
  0.368,
  0.373,
  0.377,
  0.382,
  0.386,
  0.391,
  0.396,
  0.4,
  0.405,
  0.409,
  0.414,
  0.418,
  0.422,
  0.427,
  0.431,
  0.436,
  0.44,
  0.444,
  0.449,
  0.453,
  0.457,
  0.461,
  0.466,
  0.47,
  0.474,
  0.478,
  0.482,
  0.487,
  0.491,
  0.495,
  0.499,
  0.503,
  0.507,
  0.511,
  0.515,
  0.519,
  0.523,
  0.527,
  0.531,
  0.535,
  0.539,
  0.543,
  0.547,
  0.551,
  0.555,
  0.558,
  0.562,
  0.566,
  0.57,
  0.574,
  0.578,
  0.581,
  0.585,
  0.589,
  0.593,
  0.596,
  0.6,
  0.604,
  0.607,
  0.611,
  0.615,
  0.618,
  0.622,
  0.626,
  0.629,
  0.633,
  0.636,
  0.64,
  0.643,
  0.647,
  0.65,
  0.654,
  0.657,
  0.661,
  0.664,
  0.668,
  0.671,
  0.675,
  0.678,
  0.682,
  0.685,
  0.688,
  0.692,
  0.695,
  0.699,
  0.702,
  0.705,
  0.709,
  0.712,
  0.715,
  0.718,
  0.722,
  0.725,
  0.728,
  0.731,
  0.735,
  0.738,
  0.741,
  0.744,
  0.748,
  0.751,
  0.754,
  0.757,
  0.76,
  0.763,
  0.767,
  0.77,
  0.773,
  0.776,
  0.779,
  0.782,
  0.785,
  0.788,
  0.791,
  0.794,
  0.797,
  0.8,
  0.803,
  0.806,
  0.809,
  0.812,
  0.815,
  0.818,
  0.821,
  0.824,
  0.827,
  0.83,
  0.833,
  0.836,
  0.839,
  0.842,
  0.845,
  0.848,
  0.851,
  0.853,
  0.856,
  0.859,
  0.862,
  0.865,
  0.868,
  0.87,
  0.873,
  0.876,
  0.879,
  0.882,
  0.885,
  0.887,
  0.89,
  0.893,
  0.896,
  0.898,
  0.901,
  0.904,
  0.907,
  0.909,
  0.912,
  0.915,
  0.917,
  0.92,
  0.923,
  0.925,
  0.928,
  0.931,
  0.933,
  0.936,
  0.939,
  0.941,
  0.944,
  0.947,
  0.949,
  0.952,
  0.954,
  0.957,
  0.96,
  0.962,
  0.965,
  0.967,
  0.97,
  0.972,
  0.975,
  0.977,
  0.98,
  0.982,
  0.985,
  0.988,
  0.99,
  0.993,
  0.995,
  0.998,
  1.0
]
